--- a/.travis.yml
+++ b/.travis.yml
@@ -38,9 +38,9 @@ env:
   #- REQUIREMENTS=devel
 
 install:
-  - "pip install --upgrade pip  --use-mirrors"
-  - "pip install coveralls pep257 --use-mirrors"
-  - "pip install pytest pytest-pep8 pytest-cov pytest-cache --use-mirrors"
+  - "pip install --upgrade pip"
+  - "pip install coveralls pep257"
+  - "pip install pytest pytest-pep8 pytest-cov pytest-cache"
   - "pip install -r .travis-$REQUIREMENTS-requirements.txt"
 
 script:
