global: cleaning PEP errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ install:
   - "pip install -r .travis-$REQUIREMENTS-requirements.txt"
 
 script:
-  - "pep257 --ignore=D100,D101,D102,D103 flask_oaiserver"
+  - "pep257 --ignore=D100,D101,D102,D103,D211 flask_oaiserver"
   #- "sphinx-build -qnNW docs"
   - "python setup.py test"
 
